# fridaay

./: README.md  pyproject.toml
.github/workflows/: setup_poetry.yml
dad-sql-pandas/: dad_sql.py
dad_sql_pandas/: dad_sql.py
examples/: recent_pets.yml
fridaay/: __init__.py  constants.py  load.py  pipe.py  registry.py  schema.py  yaml.py
fridaay/dad/: dad-core.yml  dad-init.yml  dad-sql.yml
pipes/: demo_pets.yml
tests/: conftest.py  test_fridaay.py  test_load.py  test_pandas.py  test_pipe.py  test_registry.py  test_schema.py  test_yaml.py
